<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/back"
            android:textColor="@color/teal1"
            app:iconTint="@color/teal1"
            app:iconPadding="0dp"
            android:paddingStart="8dp"
            app:icon="@drawable/ic_arrow_back_24"
            tools:ignore="RtlSymmetry" />


        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/stomadical_logo"
            />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="56dp"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHorizontal_bias="0.231"
            tools:layout_editor_absoluteX="16dp">
            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/junegull_rg"
                android:text="Register"
                android:textStyle="bold"
                android:textColor="@color/teal1"
                android:letterSpacing="0.2"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayNama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regInputNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayTglLahir"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tgl_lahir"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar_month_24"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                app:endIconTint="@color/teal2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regInputTglLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayTelp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_telp"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/regInputTelp"
                    android:textColor="@color/teal4"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupJnsKelamin"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/jnsKelaminText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jns_kelamin"
                    android:textColor="@color/teal2"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/regRadioPria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pria"
                    android:textColor="@color/teal3"
                    android:buttonTint="@color/teal1"/>
                <RadioButton
                    android:id="@+id/regRadioWanita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wanita"
                    android:textColor="@color/teal3"
                    android:buttonTint="@color/teal1"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayAlamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/regInputAlamat"
                    android:textColor="@color/teal4"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/regLayProvinsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/provinsi"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/teal2"
                        android:textColorHint="@color/teal2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/provinsiACT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@color/teal2"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/regLayKabkot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kabupatenkota"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/teal2"
                        android:textColorHint="@color/teal2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/kabkotACT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@color/teal2"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regLayPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/teal2"
                android:hint="@string/pass"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/regInputPassword"
                    android:textColor="@color/teal4"
                    android:inputType="textWebPassword" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnRegister"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Register"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>