<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add_bahan_makanan"
    tools:context=".Fragment.FragmentAddBahanMakananDokter">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAddBahanMakanan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButtonAddBahanMakanan"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/back"
                android:textColor="@color/teal1"
                app:icon="@drawable/ic_arrow_back_24"
                app:iconPadding="0dp"
                app:iconTint="@color/teal1"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/stomadical_logo" />

        </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/svAddBahanMakanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLayout"
                app:layout_constraintVertical_bias="0.2"
                tools:layout_editor_absoluteX="16dp">
                <TextView
                    android:id="@+id/addBahanMakananText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/junegull_rg"
                    android:text="Tambah Bahan Makanan"
                    android:textStyle="bold"
                    android:textColor="@color/teal1"
                    android:letterSpacing="0.1"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewNamaBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_bahan_makanan"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputNamaBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewTakaranBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/takaran"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputTakaranBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewKaloriBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kalori"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputKaloriBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewKarbohidratBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/karbohidrat"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputKarbohidratBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewProteinNBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein_nabati_g"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputProteinNBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewProteinHBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein_hewani_g"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputProteinHBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textViewLemakBahanMakanan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lemak_g"
                    android:textColorHint="@color/teal2"
                    app:boxStrokeColor="@color/teal2"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputLemakBahanMakanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/teal4" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btnAddBahanMakanan"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tambah"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>