<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_profil_user"
    tools:context=".Fragment.FragmentProfilUser"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/stomadical_logo"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menuUserBtn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                app:icon="@drawable/ic_menu_24"
                app:iconSize="30dp"
                android:contentDescription="menu"
                android:background="?android:attr/selectableItemBackground"
                />


        </RelativeLayout>

        <TextView
            android:id="@+id/profilText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/junegull_rg"
            android:text="Profil"
            android:textStyle="bold"
            android:textColor="@color/teal1"
            android:letterSpacing="0.2"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/profilText"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewNamaUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputNamaUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewEmailUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputEmailUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewTglLahirUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tgl_lahir"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputTglLahirUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewUmurUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Umur"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputUmurUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewNoTelpUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_telp"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputNoTelpUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textViewGenderUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Jenis Kelamin"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/teal2"
                android:textColorHint="@color/teal2"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prInputGenderUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal4"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>